--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Store Index</title>
+    <title>Mongoose Store</title>
 </head>
 <body>
-    <h1>Store</h1>
+    <h1>Shop</h1>
+    <ul>
+        <% for( let i = 0; i < Product.length; i++ ) { %>
+            <li>
+                <a href="/store/<%= i %> ">
+                    <%= Product[i] %>
+                    <img src="<%= Product[i].img %> " alt="<%= Product[i] %> ">
+                    Price: <%= Product[i].price %>
+                </a>
+            </li>
+        <% } %>
+    </ul>
+
 </body>
 </html>
