--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,12 +9,12 @@
 <body>
     <h1>Shop</h1>
     <ul>
-        <% for( let i = 0; i < Product.length; i++ ) { %>
+        <% for( let i = 0; i < product.length; i++ ) { %>
             <li>
                 <a href="/store/<%= i %> ">
-                    <%= Product[i] %>
-                    <img src="<%= Product[i].img %> " alt="<%= Product[i] %> ">
-                    Price: <%= Product[i].price %>
+                    <%= product[i].name %>
+                    <img src="<%= product[i].img %> " alt="<%= product[i] %> ">
+                    Price: $<%= product[i].price %>
                 </a>
             </li>
         <% } %>
