--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,7 +11,7 @@
     <form action="/store" method="POST">
         name: <input type="text" name="name"><br/>
         description: <input type="text" name="description"><br/>
-        img: <input type="file" accept="image/png, image/jpeg" name="img"><br/>
+        img: <input type="text" accept="image/png, image/jpeg" name="img"><br/>
         price: <input type="number" name="price"><br/>
         qty: <input type="number" name="qty"><br/>
         <input type="submit" name="" value="Add Product">
