--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Page</title>
+    <title>
+    </title>
 </head>
 <body>
-    <h1>Show Page</h1>
+    <h1>
+        <%= index %>
+
+    </h1>
+    
+
 </body>
 </html>
