--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-    </title>
+    <title></title>
 </head>
 <body>
+    <nav>
+        <a href="/store">
+            Back to the Store
+        </a>
+    </nav>
     <h1>
-        <%= index %>
-
+        <%= product.name %> 
     </h1>
-    
+    <div>
+        <img src="<%= product.img %>" alt="<%= product.name %>">
+        <p>
+            <%= product.description %> 
+        </p>
+        Price: $<%= product.price %>
+        <%= product.qty %> remaining
+        <form action="/store/<%= product._id %>/buy">
+            <input type="submit" value="Buy">
+        </form>
+        <a href="/store/<%= product._id %>/edit">
+            Edit this product
+        </a>
+    </div>
+    <form action="/store">
+        <input type="submit" value="delete">
+    </form>
+
 
 </body>
 </html>
