--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,14 +7,17 @@
     <title></title>
 </head>
 <body>
+
     <nav>
         <a href="/store">
             Back to the Store
         </a>
     </nav>
+
     <h1>
         <%= product.name %> 
     </h1>
+
     <div>
         <img src="<%= product.img %>" alt="<%= product.name %>">
         <p>
@@ -29,10 +32,10 @@
             Edit this product
         </a>
     </div>
-    <form action="/store">
+
+    <form action="/store<%= product._id %>?_method=DELETE" method="POST">
         <input type="submit" value="delete">
     </form>
-
-
+    
 </body>
 </html>
