--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <%- include ('./partials/head.ejs') %> 
+    <title><%= product %> </title>
 </head>
 <body>
 
@@ -18,7 +16,7 @@
         <%= product.name %> 
     </h1>
 
-    <div>
+    <div id='container'>
         <img src="<%= product.img %>" alt="<%= product.name %>">
         <p>
             <%= product.description %> 
@@ -36,6 +34,6 @@
     <form action="/store<%= product._id %>?_method=DELETE" method="POST">
         <input type="submit" value="delete">
     </form>
-    
+
 </body>
 </html>
