--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include ('./partials/head.ejs') %> 
     <title>Mongoose Store</title>
 </head>
 <body>
@@ -15,7 +13,7 @@
     <h1>Shop</h1>
     <ul>
         <% product.forEach(product => { %>
-            <li>
+            <li id='container'>
                 <a href="/store/<%= product._id %> ">
                     <%= product.name %>
                     <img src="<%= product.img %> " alt="<%= product.name %> ">
@@ -24,6 +22,7 @@
                 <form action="/store/<%= product._id %>?_method=DELETE" method="POST">
                     <input type="submit" value="delete">
                 </form>
+                <a href="/store/<%=product._id %>/edit">Edit</a>
             </li>
         <% }) %> 
     </ul>
