--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <%- include ('./partials/head.ejs') %> 
     <title>Add New Item</title>
 </head>
 <body>
     <h1>Add New Item</h1>
-    <form action="/store" method="POST">
+    <form id='container' action="/store" method="POST">
         name: <input type="text" name="name"><br/>
         description: <input type="text" name="description"><br/>
         img: <input type="text" accept="image/png, image/jpeg" name="img"><br/>
